--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>my-elasticsearch-starter</artifactId>
+    <version>1.0.0-SNAPSHOT</version>     
 
     <properties>
         <commons-lang3.version>3.12.0</commons-lang3.version>
