--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>my-elasticsearch-starter</artifactId>
+    <groupId>com.my.es</groupId>
+    <artifactId>elasticsearch-starter</artifactId>
     <version>1.0.0-SNAPSHOT</version>     
 
     <properties>
